[project]
name = "roll"
version = "1.0.0"
description = ""
authors = [{ name = "MarceIine", email = "ac405040500@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click (>=8.1.8,<9.0.0)"]
license = { file = "LICENSE" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
roll = 'roll.main:main'
